[gd_scene load_steps=26 format=2]

[ext_resource path="res://menus/pause_menu/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://Yagitudeh.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/ui/UI_Button_1.png" type="Texture" id=3]
[ext_resource path="res://assets/music/plant_happy.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/ui/grabber_cablit.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/UI_Button_Down.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/grabber_cablit_hovered.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/UI_Button_Hovered.png" type="Texture" id=8]


[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="DynamicFont" id=12]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=13]
color = Color( 0.25098, 0.0470588, 0.223529, 1 )

[sub_resource type="StyleBoxLine" id=14]
color = Color( 0.25098, 0.0470588, 0.223529, 1 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 128, 64 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1034.0
margin_bottom = 610.0
color = Color( 0.027451, 0.0235294, 0.0588235, 0.431373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paused" type="RichTextLabel" parent="."]
margin_left = 420.177
margin_top = 51.9814
margin_right = 651.177
margin_bottom = 125.981
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedButtons" type="VBoxContainer" parent="."]
margin_left = 406.25
margin_top = 253.015
margin_right = 647.25
margin_bottom = 483.015
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="PausedButtons"]
margin_right = 261.0
margin_bottom = 68.0
rect_min_size = Vector2( 80, 64 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Resume"

[node name="Options" type="Button" parent="PausedButtons"]
margin_top = 72.0
margin_right = 261.0
margin_bottom = 140.0
rect_min_size = Vector2( 80, 64 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 5 )
text = " Options "

[node name="Menu" type="Button" parent="PausedButtons"]
margin_top = 144.0
margin_right = 261.0
margin_bottom = 212.0
rect_min_size = Vector2( 80, 64 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 5 )
text = "Menu"

[node name="OptionsSettings" type="VBoxContainer" parent="."]
visible = false
margin_left = 406.25
margin_top = 253.015
margin_right = 647.25
margin_bottom = 483.015
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSettings" type="VBoxContainer" parent="OptionsSettings"]
margin_right = 241.0
margin_bottom = 105.0
alignment = 1

[node name="Music" type="RichTextLabel" parent="OptionsSettings/MusicSettings"]
margin_right = 241.0
margin_bottom = 69.0
custom_fonts/normal_font = SubResource( 12 )
bbcode_enabled = true
bbcode_text = "[center]Music"
text = "Music"
fit_content_height = true

[node name="MusicSlider" type="HSlider" parent="OptionsSettings/MusicSettings"]
margin_top = 73.0
margin_right = 241.0
margin_bottom = 105.0
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundsSettings" type="VBoxContainer" parent="OptionsSettings"]
margin_top = 109.0
margin_right = 241.0
margin_bottom = 214.0
alignment = 1

[node name="Sounds" type="RichTextLabel" parent="OptionsSettings/SoundsSettings"]
margin_right = 241.0
margin_bottom = 69.0
custom_fonts/normal_font = SubResource( 12 )
bbcode_enabled = true
bbcode_text = "[center]Sounds"
text = "Sounds"
fit_content_height = true

[node name="SoundsSlider" type="HSlider" parent="OptionsSettings/SoundsSettings"]
margin_top = 73.0
margin_right = 241.0
margin_bottom = 105.0
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundPlayer" type="AudioStreamPlayer2D" parent="OptionsSettings/SoundsSettings"]
position = Vector2( -406.25, -346.015 )
stream = ExtResource( 4 )
bus = "Sound"

[node name="Back" type="Button" parent="OptionsSettings"]
margin_top = 218.0
margin_right = 241.0
margin_bottom = 286.0
rect_min_size = Vector2( 80, 64 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
custom_fonts/font = SubResource( 5 )
text = "Back"

[connection signal="pressed" from="PausedButtons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PausedButtons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="PausedButtons/Menu" to="." method="_on_Menu_pressed"]
[connection signal="value_changed" from="OptionsSettings/MusicSettings/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="OptionsSettings/SoundsSettings/SoundsSlider" to="." method="_on_SoundsSlider_value_changed"]
[connection signal="pressed" from="OptionsSettings/Back" to="." method="_on_Back_pressed"]
